--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   clock: ^1.1.1
   flutter_test:
     sdk: flutter
+  golden_toolkit: ^0.15.0
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_lints: ^4.0.0
